# freefang-server

./: .gitignore  PROTOCOL.md  README.md  pyproject.toml  setup.py
freefang/: events.py  example.py  freefang_net.py  freefang_utils.py  main.py  models.py  net.py  packets.py  roles.py  server.py  test.py  voting.py
freefang/models/: game.py
freefang/tests/: creategame.py  gametest.sh  test.py  tst.py
