[build-system]
requires = ["setuptools"]
build-backend = 'setuptools.build_meta'

[project]
name  = "freefang-server"
version = "0.3.1"
authors = [
  { name="Solaris", email="iusegentoobtw@protonmail.com" },
  { name="lukakralik", email="luka.kralik@gmail.com"}
]
description = "The server for FreeFang, a libre python implementation of Werewolf (also known as Mafia)"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/FreeFangGame/freefang-server"
"Bug Tracker" = "https://github.com/FreeFangGame/freefang-server/issues"
